--- a/WindSDK/Sigmob.bundle/zh-Hans.lproj/SigmobLanguage.strings
+++ b/WindSDK/Sigmob.bundle/zh-Hans.lproj/SigmobLanguage.strings
@@ -31,7 +31,7 @@
 "Ad is not ready" = "激励视频未准备好";
 "The advertising information sent by server is missing key information" = "server下发的广告信息缺失关键信息";
 "The downloaded file checked md5 error" = "下载的文件校验md5出错";
-"Ad download is timeout" = "下载广告超时";
+"Ad download is timeout" = "广告加载超时";
 "Splash ads does not support the direction of the current application" = "开屏广告不支持当前应用的方向";
 "Splash ads does not support the type of resources" = "开屏广告不支持的资源类型";
 "The AD is not ready or expired" = "广告未准备好或者广告已过期";
@@ -46,6 +46,7 @@
 "Mraid ads does not support the application os version" = "Mraid Ad不支持当前os_version";
 "Not loaded into resource bundle(Sigmob.bundle)" = "缺少资源包Sigmob.bundle";
 "Placement id is empty" = "广告位id为空";
+"The adapter version of the channel does not match" = "渠道的适配器版本不匹配";
 
 //splash Ad
 "Skip Ad" = "跳过广告";
