--- a/WindSDK/Sigmob.bundle/en.lproj/SigmobLanguage.strings
+++ b/WindSDK/Sigmob.bundle/en.lproj/SigmobLanguage.strings
@@ -15,5 +15,5 @@
 "关闭视频?" = "Close video?";
 "确定关闭" = "Confirm";
 "继续播放" = "Cancel";
-"还剩%d秒，您就可以获得奖励了哦!" = "You will be rewarded with only %d seconds."
+"还剩%d秒，您就可以获得奖励了哦!" = "You will be rewarded with only %d seconds.";
 "关闭" = "Close";
